# Customer-Review-Intelligence-System

./: .gitignore  AGENTS.md  Admin_Dashboard_Design.md  Customer_Feedback_Form_Design.md  README.md  pyproject.toml  requirements.txt
APP/: main.py
APP/static/: admin_dashboard.css  admin_dashboard.js  auth.css  auth.js  feedback_form.css  feedback_form.js
APP/templates/: admin_dashboard.html  feedback_closed.html  feedback_form.html  login.html
Design/Admindashboard/: DESIGN.md  code.html
Design/FeedbackForm/: DESIGN.md  code.html
configs/: hyperparameters.json  model_config.py  system_prompt.md
database/: connect_db.py  init_db.py
model/: logistic_regression_nlp.joblib
notebook/: notebook1.ipynb
results/: lightgbm_best_parameters.json  lightgbm_result_metrics.json  logistic_regression_best_parameters.json  logistic_regression_result_metrics.json  test_results.csv  xgboost_best_parameters.json  xgboost_result_metrics.json
src/: logger.py  train_nlp.py
src/llm/: dummy_data.json  llm_output.md  solution_engine.py
src/nlp/: mlflow.db  train_all_models.py  train_single_model.py
src/nlp/mlruns/0/9f325a9a42da441aaf115bde55a6764f/artifacts/: cv_results.csv  estimator.html
src/nlp/mlruns/0/a3b60090e29b434d8046ce8ee433d1aa/artifacts/: cv_results.csv  estimator.html
src/nlp/mlruns/0/ecd8e5ff06a44b90946a5467e389fa32/artifacts/: cv_results.csv  estimator.html
src/nlp/mlruns/0/models/m-48ee6e1652924870a2a203bc36a9df4d/artifacts/: MLmodel  model.pkl
src/nlp/mlruns/0/models/m-77a84c29e840483d84d463a7c912ee09/artifacts/: MLmodel  conda.yaml  model.pkl
src/nlp/mlruns/0/models/m-a28fdfbb6a9a49909480ff8e0c93453c/artifacts/: MLmodel
src/nlp/mlruns/0/models/m-a4edb90e4c114e049b6f7556f171a81d/artifacts/: MLmodel  conda.yaml
src/nlp/mlruns/0/models/m-f2dfdfe447c745f0817d43f268b2ba82/artifacts/: MLmodel  requirements.txt
src/nlp/mlruns/0/models/m-fa8ed184dddb4669b5ba18b4075e1f24/artifacts/: MLmodel  conda.yaml  requirements.txt
src/utils/: data_utils.py
tests/: ollama_stream.py  test_feedback_form.py  test_hyperparameters.py  test_logger.py  test_metrics.py  test_nlp_model.py
