[project]
name = "customer-review-intelligence-system"
version = "0.1.0"
description = "Customer Review classification using NLP and business solutions using LLM"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "flask>=3.1.3",
    "gensim>=4.4.0",
    "lightgbm>=4.6.0",
    "mlflow>=1.27.0",
    "mysql-connector-python>=9.7.0",
    "numpy>=2.4.6",
    "pandas>=3.0.3",
    "python-dotenv>=1.2.2",
    "scikit-learn>=1.8.0",
    "xgboost>=3.2.0",
]
