[project]
name = "customer-review-intelligence-system"
version = "0.1.0"
description = "Customer Review classification using NLP and business solutions using LLM"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "aiohappyeyeballs==2.6.1",
    "aiohttp==3.13.5",
    "aiosignal==1.4.0",
    "alembic==1.18.4",
    "annotated-doc==0.0.4",
    "annotated-types==0.7.0",
    "anyio==4.12.1",
    "asttokens==3.0.1",
    "async-timeout==4.0.3",
    "attrs==25.4.0",
    "backoff==2.2.1",
    "bcrypt==5.0.0",
    "blinker==1.9.0",
    "build==1.4.0",
    "cachetools==7.0.6",
    "certifi==2026.2.25",
    "cffi==2.0.0",
    "charset-normalizer==3.4.4",
    "chromadb==1.5.2",
    "click==8.3.1",
    "cloudpickle==3.1.2",
    "colorama==0.4.6",
    "coloredlogs==15.0.1",
    "comm==0.2.3",
    "comtypes==1.4.16",
    "contourpy==1.3.2",
    "cryptography==46.0.7",
    "cycler==0.12.1",
    "databricks-sdk==0.105.0",
    "dataclasses-json==0.6.7",
    "debugpy==1.8.20",
    "decorator==5.2.1",
    "distro==1.9.0",
    "docker==7.1.0",
    "durationpy==0.10",
    "exceptiongroup==1.3.1",
    "executing==2.2.1",
    "fastapi==0.136.1",
    "filelock==3.25.0",
    "filetype==1.2.0",
    "flask==3.1.3",
    "flask-cors==6.0.2",
    "flask-sqlalchemy==3.1.1",
    "flatbuffers==25.12.19",
    "fonttools==4.62.1",
    "frozenlist==1.8.0",
    "fsspec==2026.2.0",
    "gensim>=4.4.0",
    "gitdb==4.0.12",
    "gitpython==3.1.47",
    "google-auth==2.49.2",
    "google-genai==1.72.0",
    "googleapis-common-protos==1.72.0",
    "graphene==3.4.3",
    "graphql-core==3.2.8",
    "graphql-relay==3.2.0",
    "greenlet==3.4.0",
    "grpcio==1.78.0",
    "h11==0.16.0",
    "hf-xet==1.3.2",
    "httpcore==1.0.9",
    "httptools==0.7.1",
    "httpx==0.28.1",
    "httpx-sse==0.4.3",
    "huey==2.6.0",
    "huggingface-hub==1.5.0",
    "humanfriendly==10.0",
    "idna==3.11",
    "imbalanced-learn==0.14.1",
    "importlib-metadata==8.7.1",
    "importlib-resources==6.5.2",
    "ipykernel==7.2.0",
    "ipython==8.38.0",
    "itsdangerous==2.2.0",
    "jedi==0.19.2",
    "jinja2==3.1.6",
    "joblib==1.5.3",
    "jsonpatch==1.33",
    "jsonpointer==3.1.1",
    "jsonschema==4.26.0",
    "jsonschema-specifications==2025.9.1",
    "jupyter-client==8.8.0",
    "jupyter-core==5.9.1",
    "kiwisolver==1.5.0",
    "kubernetes==35.0.0",
    "langchain==1.2.15",
    "langchain-chroma==1.1.0",
    "langchain-classic==1.0.3",
    "langchain-community==0.4.1",
    "langchain-core==1.2.28",
    "langchain-google-genai==4.2.1",
    "langchain-huggingface==1.2.1",
    "langchain-ollama==1.1.0",
    "langchain-text-splitters==1.1.1",
    "langgraph==1.1.6",
    "langgraph-checkpoint==4.0.1",
    "langgraph-prebuilt==1.0.9",
    "langgraph-sdk==0.3.13",
    "langsmith==0.7.30",
    "lightgbm==4.6.0",
    "llvmlite==0.47.0",
    "mako==1.3.11",
    "markdown-it-py==4.0.0",
    "markupsafe==3.0.3",
    "marshmallow==3.26.2",
    "matplotlib==3.10.8",
    "matplotlib-inline==0.2.1",
    "mdurl==0.1.2",
    "mlflow==3.11.1",
    "mlflow-skinny==3.11.1",
    "mlflow-tracing==3.11.1",
    "mmh3==5.2.0",
    "mouseinfo==0.1.3",
    "mpmath==1.3.0",
    "multidict==6.7.1",
    "mypy-extensions==1.1.0",
    "mysql-connector-python>=9.7.0",
    "nest-asyncio==1.6.0",
    "networkx==3.4.2",
    "nltk==3.9.4",
    "numba==0.65.1",
    "numpy==2.2.6",
    "oauthlib==3.3.1",
    "ollama==0.6.1",
    "onnxruntime==1.23.2",
    "opentelemetry-api==1.39.1",
    "opentelemetry-exporter-otlp-proto-common==1.39.1",
    "opentelemetry-exporter-otlp-proto-grpc==1.39.1",
    "opentelemetry-proto==1.39.1",
    "opentelemetry-sdk==1.39.1",
    "opentelemetry-semantic-conventions==0.60b1",
    "orjson==3.11.7",
    "ormsgpack==1.12.2",
    "overrides==7.7.0",
    "packaging==26.0",
    "pandas==2.3.3",
    "parso==0.8.6",
    "pillow==12.1.1",
    "platformdirs==4.9.4",
    "posthog==5.4.0",
    "prettytable==3.17.0",
    "prompt-toolkit==3.0.52",
    "propcache==0.4.1",
    "protobuf==6.33.5",
    "psutil==7.2.2",
    "psycopg2-binary==2.9.11",
    "pure-eval==0.2.3",
    "pyarrow==23.0.1",
    "pyasn1==0.6.3",
    "pyasn1-modules==0.4.2",
    "pyautogui==0.9.54",
    "pybase64==1.4.3",
    "pycaw==20251023",
    "pycparser==3.0",
    "pydantic==2.12.5",
    "pydantic-core==2.41.5",
    "pydantic-settings==2.13.1",
    "pygetwindow==0.0.9",
    "pygments==2.19.2",
    "pymsgbox==2.0.1",
    "pyparsing==3.3.2",
    "pypdf==6.10.0",
    "pyperclip==1.11.0",
    "pypika==0.51.1",
    "pypiwin32==223",
    "pyproject-hooks==1.2.0",
    "pyreadline3==3.5.4",
    "pyrect==0.2.0",
    "pyscreeze==1.0.1",
    "python-dateutil==2.9.0.post0",
    "python-dotenv==1.2.2",
    "pytweening==1.2.0",
    "pytz==2026.1.post1",
    "pywin32==311",
    "pyyaml==6.0.3",
    "pyzmq==27.1.0",
    "referencing==0.37.0",
    "regex==2026.4.4",
    "requests==2.32.5",
    "requests-oauthlib==2.0.0",
    "requests-toolbelt==1.0.0",
    "rich==14.3.3",
    "rpds-py==0.30.0",
    "safetensors==0.7.0",
    "scikit-learn==1.7.2",
    "scipy==1.15.3",
    "screen-brightness-control==0.27.1",
    "seaborn==0.13.2",
    "sentence-transformers==5.4.0",
    "shap==0.49.1",
    "shellingham==1.5.4",
    "six==1.17.0",
    "sklearn==0.0",
    "sklearn-compat==0.1.5",
    "skops==0.14.0",
    "slicer==0.0.8",
    "smmap==5.0.3",
    "sniffio==1.3.1",
    "sqlalchemy==2.0.49",
    "sqlparse==0.5.5",
    "stack-data==0.6.3",
    "starlette==1.0.0",
    "sympy==1.14.0",
    "tenacity==9.1.4",
    "threadpoolctl==3.6.0",
    "tokenizers==0.22.2",
    "tomli==2.4.0",
    "torch==2.11.0",
    "tornado==6.5.5",
    "tqdm==4.67.3",
    "traitlets==5.14.3",
    "transformers==5.5.3",
    "typer==0.24.1",
    "typing-extensions==4.15.0",
    "typing-inspect==0.9.0",
    "typing-inspection==0.4.2",
    "tzdata==2025.3",
    "urllib3==2.6.3",
    "uuid-utils==0.14.1",
    "uv==0.11.16",
    "uvicorn==0.41.0",
    "waitress==3.0.2",
    "watchfiles==1.1.1",
    "wcwidth==0.6.0",
    "websocket-client==1.9.0",
    "websockets==16.0",
    "werkzeug==3.1.8",
    "wmi==1.5.1",
    "xgboost==3.2.0",
    "xxhash==3.6.0",
    "yarl==1.23.0",
    "zipp==3.23.0",
    "zstandard==0.25.0",
]
