[project]
name = "customer-review-intelligence-system"
version = "0.1.0"
description = "Customer Review classification using NLP and business solutions using LLM"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "flask==3.1.3",
    "gensim>=4.4.0",
    "joblib==1.5.3",
    "lightgbm==4.6.0",
    "matplotlib==3.10.8",
    "mlflow==3.11.1",
    "mysql-connector-python>=9.7.0",
    "nltk==3.9.4",
    "numpy==2.2.6",
    "ollama==0.6.1",
    "pandas==2.3.3",
    "python-dotenv==1.2.2",
    "scikit-learn==1.7.2",
    "sklearn==0.0",
    "uv==0.11.16",
    "xgboost==3.2.0",
]
